# EnvForage

./: CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  issue-assignment-watchdog.yml  pr-label-manager.yml  release.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  21e6b6b21ff3_add_rocm_version_to_diagnostic_reports.py  a855f3a2d70d_add_missing_foreign_keys.py  f113b99acf31_add_missing_foreign_keys_ai_session.py
backend/app/: cache.py  config.py  database.py  main.py  worker.py
backend/app/ai/: models.py  service.py
backend/app/api/: deps.py
backend/app/compatibility/: __init__.py  errors.py  models.py  resolver.py
backend/app/core/: events.py  handlers.py  jwt.py  secrets_validation.py  security.py
backend/app/db/: indexes.py
backend/app/middleware/: metrics.py  payload_size.py  rate_limit.py  security_headers.py  sql_sanitizer.py
backend/app/models/: __init__.py  ai_session.py  diagnostic.py  profile.py  script_job.py  webhook.py
backend/app/plugins/: base.py  loader.py  sample_audit.py
backend/app/schemas/: ai.py  profile.py  script.py  seed_profile.py  verify.py
backend/app/security/: jwt_validation.py
backend/app/services/: audit_logger.py  seed_service.py  (+5 more)
backend/scripts/: fetch_pypi_metadata.py  update_python_matrix.py  validate_profiles.py
backend/seeds/: cuda_matrix.yaml  profiles.yaml
backend/tests/: conftest.py  test_exception_handlers.py  test_payload_size_middleware.py  test_rocm_matrix.py
cli/: pyproject.toml
cli/envforge_agent/: cli.py  report.py  schemas.py  utils.py
cli/envforge_agent/audit/: command.py  formatters.py  sources.py
cli/envforge_agent/detectors/: __init__.py  cuda_detector.py  gpu_detector.py  os_detector.py  python_detector.py  system_detector.py
cli/tests/: test_agent.py  test_audit.py  test_diagnose_output.py  test_fix.py  test_update_checker.py
cli/tests/fixtures/: linux_gpu.json  linux_no_cuda.json  windows_gpu.json  wsl_cuda.json
docs/: ARCHITECTURE.md
frontend/: next.config.ts  package-lock.json  package.json
(+95 files in other folders)
