[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envforge-agent"
dynamic = ["version"]
description = "EnvForge CLI Diagnostic Agent — inspect your ML environment"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["ml", "cuda", "environment", "diagnostics", "pytorch", "tensorflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",   # for --send flag (POST to API)
    "rich>=13.0.0",    # pretty terminal output
    "pyyaml>=6.0.0",   # for --format yaml in diagnose
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
envforge = "envforge_agent.cli:cli"

[project.urls]
Homepage = "https://github.com/rishabh0510rishabh/EnvForage"
Documentation = "https://github.com/rishabh0510rishabh/EnvForage/docs"
Repository = "https://github.com/rishabh0510rishabh/EnvForage"
"Bug Tracker" = "https://github.com/rishabh0510rishabh/EnvForage/issues"

[tool.hatch.build.targets.wheel]
packages = ["envforge_agent"]

[tool.hatch.version]
path = "envforge_agent/__init__.py"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
